# typenx-addon-python-sdk

./: .gitignore  README.md  pyproject.toml
src/typenx_addon_python_sdk/: __init__.py  addon.py  seasons.py  server.py  types.py
tests/: test_addon.py
